@@ -1,4 +1,5 @@
 - Blocking actions
+- Attempt to authenticate even for actions that don't require auth
 
 * Tue Oct 18 2016 - version 0.6.0
 - Token authentication: fix output of action renew
